Fix card width on small screens

--- a/static/sass/_pattern_card.scss
+++ b/static/sass/_pattern_card.scss
@@ -141,6 +141,7 @@
         position: initial;
         text-align: center;
         width: 100%;
+        max-width: none;
       }
 
       & + label::after {
